tests/libs_are_implicitly_included/libs_are_implicitly_included.exp
Stopping existing server

Starting flow

Assert flow is running
Error: src/a.js:3
  3: let x: string = 123;
                     ^^^ number. This type is incompatible with
  3: let x: string = 123;
            ^^^^^^ string


Found 1 error

Change lib file

Assert flow is not running
